--- a/templates/mypage.html
+++ b/templates/mypage.html
@@ -4,8 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kamil Legowicz, Civil Engineer + Junior Python Developer</title>
-    <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='css/styles.css') }}">
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel= "stylesheet" type="text/css" href="{{ url_for('static', filename='css/styles.css') }}">
     <link href="https://fonts.googleapis.com/css2?family=Caveat:wght@600&family=Montserrat&display=swap" rel="stylesheet">
   </head>
   <body>
@@ -16,7 +15,7 @@
           <h1>Kamil Legowicz</h1>
           <h2>Civil Engineer and self-taught programmer</h2>
           <p>As a Civil Engineer I have two specializations. I have graduated Designing Roads and Highways & Engineering structures modelling. Also have experience on construction site and design offices.</p>
-          <p>During time I found coding as something very interesting. Mainly I focus on Puthon, but by the time I started learning other languages like JavaScript by making curses. After months I have created some projects figured out by my own and saved in <a href="https://github.com/kamilego?tab=repositories" target="_blank">my repositories</a> on github site.</p>
+          <p>During time I found coding as something very interesting. Mainly I focus on Python, but by the time I started learning other languages like JavaScript by making curses. After months I have created some projects figured out by my own and saved in <a href="https://github.com/kamilego?tab=repositories" target="_blank">my repositories</a> on github site.</p>
         </div>
       </header>
 
@@ -24,11 +23,11 @@
       <section class="projects">
         <div class="content-wrap divider">
           <h2>Featured Projects</h2>
-          <p>View selected projects below. More information can be found at <a href="https://github.com/kamilego">github.com/kamilego</a>.</p>
+          <p>View selected projects below. More information can be found at my <a href="https://github.com/kamilego">GitHub</a>.</p>
 
           <!-- Project 1 -->
           <section class="project-item">
-            <img src="images/project-courses.jpg" alt="Lynda & LinkedIn Learning course list">
+            <img src="https://github.com/kamilego/Domes-vertices/blob/main/demo/Domes-vertices.gif?raw=true" alt="Dome-diplacement-gif">
             <h3>Domes generator</h3>
             <p>This script is over 80% of my masters thesis. Main goal is to automate sensitivity
               analysis of domes constructions by creating many files with modified vertices of
@@ -40,24 +39,33 @@
 
           <!-- Project 2 -->
           <section class="project-item">
-            <img src="images/project-women-tech.jpg" alt="Women and Tech website">
+            <img src="https://github.com/kamilego/Antennas-GUI/raw/main/demo/Antennas-GUI.gif" alt="Antennas-automation">
             <h3>Antennas rotate solver</h3>
-            <p>Script automates boring and monotonous task which is to setup antennas with
-              right azimuth in AutoCAD program. User sets values of degrees and types of
-              antennas. Python takes control of mouse and keyboard and in a short time does
-              all donkey work. It helps a lot and saves a lot of time.</p>
+            <p>Script automates monotonous task to setup antennas with azimuth 
+              in AutoCAD program. User sets values of degrees and types of antennas.
+              Python takes control of mouse and keyboard and does all donkey work. It helps and saves a lot of time.</p>
             <a class="btn" href="https://github.com/kamilego/Antennas-GUI" target="_blank">GitHub Link</a>
           </section>
 
           <!-- Project 3 -->
           <section class="project-item">
-            <img src="images/project-wire-ipsum.jpg" alt="The Wire Ipsum website">
+            <img src="../static/photos/lattice_mast.png" alt="The Wire Ipsum website">
             <h3>Forces analysis</h3>
             <p>Scripts help with analysis of forces/displacements of existing lattice mast which
               are overload. Autodesk Robot program provides FEM calculations and returns as
               a result csv file that contains over 200 thousand lines of data. Main goal is to sort
               and manipulate data with certain way to save them in excel file.</p>
             <a class="btn" href="http://thewireipsum.com" target="_blank">GitHub Link</a>
+          </section>
+
+          <!-- Project 4 -->
+          <section class="project-item">
+            <img src="images/project-wire-ipsum.jpg" alt="The Wire Ipsum website">
+            <h3>Zajecia Programowania XD</h3>
+            <p>I took part in big project where many different people started learning coding on discord.
+              There were a lot of various tasks. I have reminded some python basics and learned some new frameworks like flask.
+              Main goal was to get enought experiance to find new job. Everything was covered by version control git.</p>
+            <a class="btn" href="https://github.com/kamilego/zajecia_programowania_xd" target="_blank">GitHub Link</a>
           </section>
         </div>
       </section>
@@ -131,20 +139,9 @@
         <div class="content-wrap item-details">
           <h2>Education</h2>
           <section>
-            <h3>Seneca College - Toronto, ON</h3>
-            <p>Webmaster Content Site Design Certificate, 2006</p>
-            <p>14 week full-time program covering HTML, CSS, Flash, Photoshop, PHP and JavaScript.</p>
-          </section>
-
-          <section>
-            <h3>York University - Toronto, ON</h3>
-            <p>Bachelor of Arts with Honours, 2001-2005</p>
-            <p>Double Major in Communications & Psychology.</p>
-          </section>
-
-          <section>
-            <h3>San Jose State University - San Jose, CA</h3>
-            <p>General Studies, 2000</p>
+            <h3>Gdansk University of Technology - Gdansk, Poland</h3>
+            <p>Civil Engineering, 2015-2021</p>
+            <p>MSc in Civil Engineering with Roads and Contructures specialization</p>
           </section>
         </div>
       </section>
